# BSc_Inf_S6_Compilerbau_Testate

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  main.cpp  manual_commands.md  test1.txt  toggle_ast.sh
.devcontainer/: Dockerfile  devcontainer.json
aassembler-aarest/: Makefile.
ast/: ast-test-1.cpp  ast-test-2.cpp  ast-test-3.cpp  ast-test-4.cpp  ast.cpp  ast.h  ast_builder.cpp  ast_builder.hpp  ast_expression.cpp  ast_expression.h  ast_normal.cpp  ast_normal.h
ast-2-aassembler/: ast-2-aassembler.cpp  ast-2-aassembler.hpp
ast-2-aassembler/tests/: betrag.pl0  fakultaet.pl0  sieben.pl0
ast-2-aassembler/tests/expected/: sieben.asm
ast/tests/: associativity.pl0  jumps.pl0  procedures.pl0  scoping.pl0
everything_in_single_directory/: Makefile  project.cpp  project.l  project.y  test.pl0
parser/: BNF.txt  EBNF.txt  my_pl-0.cpp  pl-0.cpp  pl0.y  pl0_trace.y  pl0_without_semantics.y
parser/tests/: README.txt
parser/tests/normal/: block2.pl0  block3.pl0  block4.pl0  block5.pl0  block6.pl0  block7.pl0  block8.pl0  block9.pl0  complex.pl0  condition1.pl0  condition2.pl0  condition3.pl0  condition4.pl0  condition5.pl0  condition6.pl0  condition7.pl0  constant_and_arithmetic_expression.pl0  edge-comments3.pl0  edgecases.pl0  expression1.pl0  expression2.pl0  expression3.pl0  expression4.pl0  expression5.pl0  expression6.pl0  factor1.pl0  factor3.pl0  factor4.pl0  factor5.pl0  if_then_while.pl0  multiple_procedures.pl0  numbers_identifiers.pl0  precedence_associativity.pl0  problemfall.pl0  procedure-comment.pl0  procedure.pl0  random1.pl0  read_write.pl0  simple-comment.pl0  statement10.pl0  (+17 more)
parser/tests/syntaxfehler/: bad2.pl0  factor1.pl0  random1.pl0  random2.pl0  (+5 more)
problemfall/: Makefile  manual_commands.md  pl-0.cpp  pl0-scanner.l  pl0.y  pl0_parser
problemfall/bad/: problemfall_mit_fehler.pl0
scanner/: parser_stubs.cpp  pl0-scanner.l  pl0tokens.h  run_scanner_examples.sh  run_scanner_tests.sh  test.c  test.cpp  test1.pl0  test1.txt
scanner/test-cases/: comments.pl0  complex.pl0  edge-comments1.pl0  edge-comments2.pl0  edge-comments3.pl0  edge-comments4.pl0  edgecases.pl0  nested-comments.pl0  operators.pl0  simple1.pl0
symboltable/: symboltabelle.hpp
testat4/: Makefile  ast_builder.hpp  pl0-scanner.l  pl0-studi.cpp  pl0.y  ram.cpp  ram.h
testat4/tests/: betrag.pl0  euclid_gcd.pl0  faculty_and_checksum.pl0  fakultaet.pl0  scoping_test.pl0
tests/: euclid_gcd.pl0  faculty_and_checksum.pl0  scoping_test.pl0
tests/expected/: betrag.asm  betrag.json  sieben.asm  sieben.json
tests/output/: betrag.asm  betrag.json  euclid_gcd.asm  euclid_gcd.json  faculty_and_checksum.asm  faculty_and_checksum.json  fakultaet.asm  fakultaet.json  scoping_test.asm  scoping_test.json  sieben.asm
tree/: tree-fibonacci.cpp  tree-hanoi.cpp  tree-rd.cpp  tree-syntaxtree.l  tree-syntaxtree.y  tree-test-1.cpp  tree-test-2.cpp  tree-test-3.cpp  tree-test-4.cpp  tree-test-5.cpp
(+75 files in other folders)
